<resources>
    <string name="hello_blank_fragment">How long have you drived?</string>
    <string name="house_button">House Settings</string>

    <string name="temperature">Temperature</string>
    <string name="image_description">Image information</string>
    <string name="humidity_textView">Humidity</string>
    <string name="wind_textView">Wind speed</string>
    <string name="title_activity_main_tool_bar">MainToolBar</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="title_activity_house_setting_main">House Settings</string>
    <string name="garage_door">Garage Door</string>
    <string name="light">Light </string>

    <string name="about">About </string>

    <string name="ok">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="title_activity_house_temp">House Temperature</string>

    <string name="zero">0</string>
    <string name="setTemp">Set House Temperature</string>
    <string name="temp_display">0</string>
    <string name="textDefault">Selected Number Display here</string>
    <string name="title_activity_living__room">Living_Room</string>

    <string name="temp_sub1">CurTempSetting</string>
    <string name="temp_sub2">ScheduleTemp</string>
    <string name="temp_sub3">Camera</string>
    <string name="temp_sub4">Welcome</string>
    <string name="weather">weather</string>
    <string name="mainTheme">Theme</string>

    <string name="displayDate">Date: </string>

    <string name="dateDefault">1990/01/01</string>
    <string name="changeDate">Set Date</string>
    <string name="displayTime">Time: </string>
    <string name="timeDefault">00:00</string>
    <string name="changeTime">Set Time</string>
    <string name="displayTemp">Temp: </string>
    <string name="tempDefault">20</string>

    <string name="changeTemp">Set Temp</string>
    <string name="confirm">Confirm</string>
    <string name="dateTime">List</string>
    <string name="title_activity_house_main">House Setting Main</string>
    <string name="schedule">Schedule Your House Temperature</string>
    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>

    <string name="garageFragment"><![CDATA[
        <p><h2>Welcome to use Garage interface</h2></p>
        <p>Instruction:</p>
        <p>1) Click the toolbar house garage icon to reach control page.</p>
        <p>2) In the control page, Swipe the garage door or light switch button will control the garage door open/close and light turn on/off.
         Also, when opening the garage door will turn on the light automatically.</p>
        <p>3) Swipe the spinner to control brightness of garage light.</p>
        ]]> </string>
    <string name="tempFragment"><![CDATA[
        <p><h2> Welcome to use House Temperature interface</h2></p>
        <p>Instruction:</p>
        <p>1) Click the toolbar house temperature icon to reach control page.</p>
        <p>2) In control page, click top toolbar of temperature icon will reach temperature setting dialog, scroll the numbers to set current
        house temperature.</p>
        <p>3) Click top toolbar of schedule icon will reach the schedule setting page, click each button of the set date, set time,and set temperature
        to set the schedule of the house temperature and click confirm button, the schedule of temperature setting will list in the main page.
        Click one of the list item will display a dialog that ask to delete this schedule time. Click switch button will allow to turn on/off the this schedule.</p>
        <p>4) Click the top toolbar camera icon will reach the device camera.</p>
        <p>5) Click the top toolbar person icon will display the button snackbar information.</p>
        ]]></string>
    <string name="weatherFragment"><![CDATA[
        <p><h2> Welcome to use Weather interface</h2></p>
        <p>Instruction:</p>
        <p>1) Click the toolbar house temperature icon to reach control page;</p>
        <p>2) In control page, it will display the current outside temperature, humidity and wind speed.</p>
        ]]></string>
    <string name="detail">Detail</string>
    <string name="ad_banner_image_description">light on picture</string>

    <string name="Bryan">Bryan Living Room</string>
    <string name="Carlos">Carlos Kitchen</string>
    <string name="Yu">Yu House Setting</string>
    <string name="James">James Automobile</string>

    <string name="help">Help</string>
    <string name="navigation_dialog_title">Where to go?</string>
    <string name="auto_navigation_ok">GO</string>
    <string name="light_title">Light</string>

    <string-array name="themelist">
        <item>Normal</item>
        <item>Console</item>
        <item>Navy</item>
    </string-array>
    <string name="app_name">Team_project_1</string>
    <string name="carlos_app_name">Shopping List</string>
    <string name="K_NewList">Start New List</string>
    <string name="K_EditList">Edit Current List</string>
    <string name="K_Shop">Let\'s Shop</string>
    <string name="K_Exit">Exit</string>
    <string name="K_MenuMsg">Enjoy your shopping</string>
    <string name="K_NewMenu">Creating New List</string>
    <string name="K_NewMenuMsg">Ready to go !</string>
    <string name="K_NewMenuSelect">Select Items</string>
    <string name="K_NewMenuDown">Download Flyers</string>
    <string name="K_NewMenuBack">Go Back</string>
    <string name="K_Help">Help</string>
    <string name="K_ShopMsg">Don\'t Forget the Beer</string>
    <string name="K_ShopMenu">Ready to Shop</string>
    <string name="K_Butt1">Retrieve List</string>
    <string name="K_Butt2">Display Flyers</string>
    <string name="K_Butt3">Reminder!</string>
    <string name="K_Butt4">Go Back</string>
    <string name="K_Diag_Title">General Information</string>
    <string name="K_S_I_Butt">Add</string>
    <string name="K_It_TV1">Item</string>
    <string name="title_flyer_list">Flyers</string>
    <string name="title_flyer_detail">Flyer Detail</string>
    <string name="K_SelectItems">Select the Items</string>
    <string name="K_EditItems">Select/Unselect Items</string>
    <string name="K_Done">Done</string>
    <string name="K_Go_Shopping">Mark items you are buying</string>
    <string name="K_LaunchBar1">Flyers already on device \nno download required...</string>
    <string name="K_LaunchBar2">Download in progress...</string>
    <string name="K_LaunchBar3">Downloading Flyers...</string>
    <string name="K_LaunchBar4">Preparing to download...</string>
    <string name="K_Wait">Please wait...</string>
    <string name="K_Toast1">Item added, needs to be selected...</string>
    <string name="K_Toast2">Item added to shopping list...</string>
    <string name="K_Toast3">Item revomed from shopping list...</string>
    <string name="K_Toast4">Flyers not downloaded yet...</string>
    <string name="K_Toast5">Item added, needs to be selected...</string>
    <string name="K_Toast6">Item is already in shopping list...</string>
    <string name="K_Toast7">Your list is empty</string>
    <string name="K_Snack1">Don\'t forget your husband\'s BEER !</string>
    <string name="K_Misc1">Displaying Flyer</string>
    <string name="K_Misc2">Items and flyers will be deleted...</string>
    <string name="K_Misc3">Delete previous list ?</string>
    <string name="K_Yes">Yes</string>
    <string name="K_D_Help1">App Information</string>
    <string name="K_D_Help2">Android Shopping List App</string>
    <string name="K_D_Help3">Version 1.0</string>
    <string name="K_D_Help4">by</string>
    <string name="K_D_Help5">Carlos Mena</string>
    <string name="K_D_Help6">Use the buttons to navigate through</string>
    <string name="K_D_Help7">the application</string>
    <string name="K_D_Help8">and have fun!</string>
    <string name="automobile">Automobile</string>
    <string name="house_setting">House Setting</string>
    <string name="kitchen">Kitchen</string>
    <string name="living_room">Living Room</string>
    <string name="default_navigation">Parliament</string>
    <string name="destination">Destination:</string>
    <string name="headlights">headlights</string>
    <string name="high_beam">High beam</string>
    <string name="in_car_light">in car light</string>
    <string name="new_station">New Radio Station</string>
    <string name="car_radio">Car Radio</string>
    <string name="auto_temperature">Temperature</string>
    <string name="fuel">Fuel</string>
    <string name="radio">Radio</string>
    <string name="gps_direction">GPS Directions</string>
    <string name="car_light">Lights</string>
    <string name="odometer">Odometer</string>
    <string name="drive">Drive</string>
    <string name="add_to_odometer">Add to Odometer</string>
    <string name="enter_km">enter km</string>
    <string name="km">KM</string>
    <string name="trip_distance">Trip Distance:</string>
    <string name="reset">reset trip</string>
    <string name="car_temperature">Car Temperature</string>
    <string name="back_temperature">Back Temperature</string>
    <string name="front_temperature">Front Temperature</string>
</resources>
