<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/t1"
        android:title="@string/temp_sub1"
        android:icon="@drawable/tempsetting"
        android:orderInCategory="101"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/t2"
        android:title="@string/temp_sub2"
        android:icon="@drawable/camera"
        android:orderInCategory="202"
        app:showAsAction="always" />

    <item android:id="@+id/t3"
        android:title="@string/temp_sub3"
        android:icon="@drawable/bar"
        android:orderInCategory="302"
        app:showAsAction="always" />

    <item android:id="@+id/t4"
        android:title="@string/about"
        android:orderInCategory="504"
        app:showAsAction="never" />

</menu>