<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:id="@+id/layout1">
    <TableLayout
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:id="@+id/tableLayout1"
        android:layout_gravity="center">

        <TableRow
            android:id="@+id/dateRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textColor="#3F51B5"
                android:id="@+id/dateText"

                android:text="@string/displayDate" />
            <EditText
                android:text="@string/dateDefault"
                android:layout_height="wrap_content"
                android:id="@+id/displayDateText"
                android:layout_width="wrap_content"
                android:inputType="date"
                android:textStyle="bold"
                android:enabled="false"/>
            <Button
                android:layout_width="wrap_content"
                android:id="@+id/changeDate"
                android:textSize="20sp"
                android:textColor="#FF4081"
                android:textStyle="bold"
                android:text="@string/changeDate"
                android:layout_height="wrap_content" />
        </TableRow>
        <TableRow
            android:id="@+id/timeRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textColor="#3F51B5"
                android:id="@+id/timeText"
                android:text="@string/displayTime" />

            <EditText
                android:text="@string/timeDefault"
                android:layout_height="wrap_content"
                android:id="@+id/displayTimeText"
                android:layout_width="wrap_content"
                android:inputType="time"
                android:textStyle="bold"
                android:enabled="false"/>
            <Button
                android:layout_width="wrap_content"
                android:id="@+id/changeTime"
                android:textSize="20sp"
                android:text="@string/changeTime"
                android:textColor="#FF4081"
                android:textStyle="bold"
                android:layout_height="wrap_content" />
        </TableRow>
        <TableRow
            android:id="@+id/TempRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textColor="#3F51B5"
                android:id="@+id/TempText"
                android:text="@string/displayTemp"
                android:enabled="false"/>
            <EditText
                android:text="@string/tempDefault"
                android:layout_height="wrap_content"
                android:id="@+id/displayTempText"
                android:layout_width="wrap_content"
                android:inputType="number"
                android:textStyle="bold"
                android:enabled="false" />
            <Button
                android:layout_width="wrap_content"
                android:id="@+id/changeTemp"
                android:textSize="20sp"
                android:textColor="#FF4081"
                android:textStyle="bold"
                android:text="@string/changeTemp"
                android:layout_height="wrap_content" />
        </TableRow>
    </TableLayout>

</LinearLayout>
