<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/carlos_main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/k_screen2"
    tools:context="com.example.yu.team_project_1.K_Shopping">

    <TextView
        android:id="@+id/K_Shop"
        android:text="@string/K_ShopMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        tools:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/K_ShopMsg"
        android:text="@string/K_ShopMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        android:textColor="?attr/colorControlNormal"
        android:textSize="18sp" />

    <Button
        android:id="@+id/K_Shop_B4"
        android:text="@string/K_Butt4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:textColor="@android:color/white"
        android:layout_above="@+id/K_ShopMsg"
        android:layout_alignStart="@+id/K_Shop_B3"
        android:minWidth="150dp"
        android:layout_marginBottom="61dp" />

    <Button
        android:id="@+id/K_Shop_B3"
        android:text="@string/K_Butt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:textColor="@android:color/white"
        android:layout_above="@+id/K_Shop_B4"
        android:layout_centerHorizontal="true"
        android:minWidth="150dp"
        android:layout_marginBottom="34dp" />

    <Button
        android:id="@+id/K_Shop_B1"
        android:text="@string/K_Butt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:textColor="@android:color/white"
        android:minWidth="150dp"
        android:layout_marginBottom="43dp"
        android:layout_above="@+id/K_Shop_B2"
        android:layout_alignStart="@+id/K_Shop_B2" />

    <Button
        android:id="@+id/K_Shop_B2"
        android:text="@string/K_Butt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:textColor="@android:color/white"
        android:minWidth="150dp"
        android:layout_marginBottom="37dp"
        android:layout_above="@+id/K_Shop_B3"
        android:layout_alignStart="@+id/K_Shop_B3" />


</RelativeLayout>
