<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/carlos_main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/k_isle2"
    tools:context="Carlos.KitchensHelper">

    <TextView
        android:text="M E N U "
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Menu"
        android:textSize="24sp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        tools:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/darker_gray" />

    <TextView
        android:text="@string/K_MenuMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="8dp"
        android:id="@+id/textView"
        android:textAlignment="center"
        android:textColor="?attr/colorControlNormal"
        android:textSize="18sp" />

    <Button
        android:text="@string/K_NewList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button1"
        android:background="@android:color/holo_blue_light"
        android:textColor="@android:color/white"
        android:layout_below="@+id/Menu"
        android:layout_alignEnd="@+id/button2"
        android:minWidth="150dp"
        android:layout_marginTop="42dp" />

    <Button
        android:text="@string/K_Exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button4"
        android:background="@android:color/holo_blue_light"
        android:textColor="@android:color/white"
        android:layout_above="@+id/textView"
        android:layout_alignStart="@+id/button3"
        android:minWidth="150dp"
        android:layout_marginBottom="61dp" />

    <Button
        android:text="@string/K_Shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:background="@android:color/holo_blue_light"
        android:textColor="@android:color/white"
        android:layout_above="@+id/button4"
        android:layout_centerHorizontal="true"
        android:minWidth="150dp"
        android:layout_marginBottom="34dp" />

    <Button
        android:text="@string/K_EditList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:background="@android:color/holo_blue_light"
        android:textColor="@android:color/white"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:minWidth="150dp"
        android:layout_marginTop="28dp" />


</RelativeLayout>
