<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yu.team_project_1.Auto_OdometerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/odometer"
            android:layout_weight="5"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="1245"
                android:layout_weight="10"
                android:id="@+id/auto_odometer"
                android:textAppearance="@style/TextAppearance.AppCompat.Display4" />

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/km"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/trip_distance"
                android:layout_weight="10"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="123"
                android:layout_weight="10"
                android:textAlignment="center"
                android:id="@+id/auto_trip_distance"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/km"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:id="@+id/auto_reset_button"
            android:layout_gravity="center"
            android:text="@string/reset"
            style="@style/Widget.AppCompat.Button.Colored" />
    </LinearLayout>

</FrameLayout>
