<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yu.team_project_1.Auto_TempFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/car_temperature"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <NumberPicker
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/auto_front_temp"
            android:scaleX="1.8"
            android:scaleY="1.8"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/front_temperature"
            android:layout_weight="1"
            android:id="@+id/auto_front_button"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        >

        <NumberPicker
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/auto_back_temp"
            android:scaleX="1.8"
            android:scaleY="1.8"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/back_temperature"
            android:layout_weight="1"
            android:id="@+id/auto_back_button"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </LinearLayout>
</LinearLayout>
    </LinearLayout>
</FrameLayout>
